Разрешить снимать отметку основной сети
